tests/lexer/fail/empty_char_constant.c
int maint(int argc, char* argv[]) {
	char* text = "hihoha";
	char t = 'o';
	char error = '';
	return 0;
}
